--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2><u>Awards</u></h2>
 								<p>
-									<li><b>1ˢᵗ Place in South India Tech Talk</b>&nbsp;<a href="images/tech_talk.jpg" class="icon fa-paper-plane"></a></li>
+									<li><a href="images/tech_talk.jpg"><b>1ˢᵗ Place in South India Tech Talk</b>&nbsp;</a><a href="images/tech_talk.jpg" class="icon fa-paper-plane"></a></li>
 										SEMAPHORE Event held at NMAM Institute of Technology (NITTE).
 										<h2></h2>
-									<li><b>2ⁿᵈ Place in Best IT Manager Event</b>&nbsp;<a href="images/IT_manager.jpg" class="icon fa-paper-plane"></a></li>
+									<li><a href="images/IT_manager.jpg"><b>2ⁿᵈ Place in Best IT Manager Event</b>&nbsp;</a><a href="images/IT_manager.jpg" class="icon fa-paper-plane"></a></li>
 										TERAHERTZ Event held at CANARA College.
 										
 									
