--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="#">Blogs</a></li>
+											<li><a href="https://medium.com/@shan-aks">Blogs</a></li>
 											<li><a href="#">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
 										</ul>
