--- a/index.html
+++ b/index.html
@@ -65,14 +65,19 @@
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2><u>Skills:</u></h2>
 								<p>
+									<li>Data Structures and Algorithms</li>
 									<li>Python</li>
-									<li>C / C++</li>
-									<li>MYSQL/SQLITE</li>
+									<li>SQL</li>
 									<li>HTML/CSS</li>
+									<li>C/C++</li>
+									<li>Docker</li>
 									<li>Operating System and LINUX</li>
-									<li>Network Security and Management</li>
+									<li>Computer Netwroks</li>
 									<li>Cloud Computing</li>
-									<li>Search Engine Optimization</li>
+									<li>Software Development</li>
+									<li>Software Testing</li>
+									<li>Software Consulting</li>
+									<li>Git</li>
 								</p>
 							</div>
 						</section>
