--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="https://medium.com/@shan-aks">Blogs</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+
 										</ul>
 									</div>
 								</li>
@@ -41,7 +40,7 @@
 							
 							</p>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">Know More</a>
 					</section>
 				
 					<section id="one" class="wrapper style1 leftcontent">
