--- a/index.html
+++ b/index.html
@@ -64,19 +64,21 @@
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2><u>Skills:</u></h2>
 								<p>
-									<li>Data Structures and Algorithms</li>
-									<li>Python</li>
-									<li>SQL</li>
-									<li>HTML/CSS</li>
-									<li>C/C++</li>
-									<li>Docker</li>
-									<li>Operating System and LINUX</li>
-									<li>Computer Netwroks</li>
-									<li>Cloud Computing</li>
-									<li>Software Development</li>
-									<li>Software Testing</li>
-									<li>Software Consulting</li>
-									<li>Git</li>
+									<b>Programming Languages:</b><br>
+										<li>Python, C, C++, HTML, CSS, SQL<br>
+									<b>Concepts:</b><br>
+										<li>DSA, Cloud Computing, Software Development,<br>
+										Software Testing, Web Development,<br>
+										Computer Networks, Proxies, Cybersecurity<br>
+									<b>Operating Systems:</b><br>
+										<li>Windows, Linux, MacOS, WSL</li><br>
+									<b>Developer Tools:</b><br>
+										<li>VMware, Git, Docker, GoLogin, VS Code,<br>
+										PyCharm, Selenium, Atom</li><br>
+									<b>Other Skills:</b><br>
+										<li>Presentation, Communication, writing(English,<br>
+											Hindi, Kannada, Arabic)</li>
+										
 								</p>
 							</div>
 						</section>
