--- a/index.html
+++ b/index.html
@@ -64,21 +64,20 @@
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2><u>Skills:</u></h2>
 								<p>
-									<b>Programming Languages:</b><br>
-										<li>Python, C, C++, HTML, CSS, SQL<br>
-									<b>Concepts:</b><br>
-										<li>DSA, Cloud Computing, Software Development,<br>
-										Software Testing, Web Development,<br>
-										Computer Networks, Proxies, Cybersecurity<br>
-									<b>Operating Systems:</b><br>
-										<li>Windows, Linux, MacOS, WSL</li><br>
-									<b>Developer Tools:</b><br>
-										<li>VMware, Git, Docker, GoLogin, VS Code,<br>
-										PyCharm, Selenium, Atom</li><br>
-									<b>Other Skills:</b><br>
-										<li>Presentation, Communication, writing(English,<br>
-											Hindi, Kannada, Arabic)</li>
-										
+									<li><b>Programming Languages:</b></li>
+										&nbspPython, C, C++, HTML, CSS, SQL<br>
+									<li><b>Concepts:</b></li>
+										&nbspDSA, Cloud Computing, Software Development,<br>
+										&nbspSoftware Testing, Web Development,<br>
+										&nbspComputer Networks, Proxies, Cybersecurity<br>
+									<li><b>Operating Systems:</b></li>
+										&nbspWindows, Linux, MacOS, WSL<br>
+									<li><b>Developer Tools:</b></li>
+										&nbspVMware, Git, Docker, GoLogin, VS Code,<br>
+										&nbspPyCharm, Selenium, Atom<br>
+									<li><b>Other Skills:</b></li>
+										&nbspPresentation, Communication, writing(English,<br>
+										&nbspHindi, Kannada, Arabic)<br>
 								</p>
 							</div>
 						</section>
