--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
 								<h2><u>Skills:</u></h2>
 								<p>
 									<li><b>Programming Languages:</b></li>
-										&nbspPython, C, C++, HTML, CSS, SQL<br>
+										&nbsp&nbsp&nbspPython, C, C++, HTML, CSS, SQL<br><br>
 									<li><b>Concepts:</b></li>
-										&nbspDSA, Cloud Computing, Software Development,<br>
-										&nbspSoftware Testing, Web Development,<br>
-										&nbspComputer Networks, Proxies, Cybersecurity<br>
+										&nbsp&nbsp&nbspDSA, Cloud Computing, Software Development,<br>
+										&nbsp&nbsp&nbspSoftware Testing, Web Development,<br>
+										&nbsp&nbsp&nbspComputer Networks, Proxies, Cybersecurity<br><br>
 									<li><b>Operating Systems:</b></li>
-										&nbspWindows, Linux, MacOS, WSL<br>
+										&nbsp&nbsp&nbspWindows, Linux, MacOS, WSL<br><br>
 									<li><b>Developer Tools:</b></li>
-										&nbspVMware, Git, Docker, GoLogin, VS Code,<br>
-										&nbspPyCharm, Selenium, Atom<br>
+										&nbsp&nbsp&nbspVMware, Git, Docker, GoLogin, VS Code,<br>
+										&nbsp&nbsp&nbspPyCharm, Selenium, Atom<br><br>
 									<li><b>Other Skills:</b></li>
-										&nbspPresentation, Communication, writing(English,<br>
-										&nbspHindi, Kannada, Arabic)<br>
+										&nbsp&nbsp&nbspPresentation, Communication, writing(English,<br>
+										&nbsp&nbsp&nbspHindi, Kannada, Arabic)<br><br>
 								</p>
 							</div>
 						</section>
