--- a/index.html
+++ b/index.html
@@ -65,19 +65,16 @@
 								<h2><u>Skills:</u></h2>
 								<p>
 									<li><b>Programming Languages:</b></li>
-										&nbsp&nbsp&nbspPython, C, C++, HTML, CSS, SQL<br><br>
+										&nbsp&nbsp&nbsp&nbspPython, C, C++, HTML, CSS, SQL
 									<li><b>Concepts:</b></li>
-										&nbsp&nbsp&nbspDSA, Cloud Computing, Software Development,<br>
-										&nbsp&nbsp&nbspSoftware Testing, Web Development,<br>
-										&nbsp&nbsp&nbspComputer Networks, Proxies, Cybersecurity<br><br>
+										&nbsp&nbsp&nbsp&nbspDSA, Cloud Computing, Software Development, Software Testing, Web Development,Computer Networks, Proxies, Cybersecurity
 									<li><b>Operating Systems:</b></li>
-										&nbsp&nbsp&nbspWindows, Linux, MacOS, WSL<br><br>
+										&nbsp&nbsp&nbsp&nbspWindows, Linux, MacOS, WSL
 									<li><b>Developer Tools:</b></li>
-										&nbsp&nbsp&nbspVMware, Git, Docker, GoLogin, VS Code,<br>
-										&nbsp&nbsp&nbspPyCharm, Selenium, Atom<br><br>
+										&nbsp&nbsp&nbsp&nbspVMware, Git, Docker, GoLogin, VS Code,
+										PyCharm, Selenium, Atom
 									<li><b>Other Skills:</b></li>
-										&nbsp&nbsp&nbspPresentation, Communication, writing(English,<br>
-										&nbsp&nbsp&nbspHindi, Kannada, Arabic)<br><br>
+										&nbsp&nbsp&nbsp&nbspPresentation, Communication, writing(English, Hindi, Kannada, Arabic)
 								</p>
 							</div>
 						</section>
@@ -85,9 +82,9 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2><u>Education</u></h2>
-								<p><li><b>Masters in Computer Application</b>,</li>National Institute of Technology Karnataka.<br/> 08/2022--05/2025.
+								<p><li><b>Masters in Computer Application</b>,</li>National Institute of Technology Karnataka.<br> 08/2022--05/2025.
 									Surathkal, Karnataka.<h2></h2>
-									<li><a href="images/degree_cirtificate.jpg"><b>Bachelors in Computer Application</b>&nbsp;</a><a href="images/degree_cirtificate.jpg" class="icon fa-paper-plane"></a></li>Mangalore University.<br/>05/2019--08/2022
+									<li><a href="images/degree_cirtificate.jpg"><b>Bachelors in Computer Application</b>&nbsp;</a><a href="images/degree_cirtificate.jpg" class="icon fa-paper-plane"></a></li>Mangalore University.<br>05/2019--08/2022
 									Mangalore, Karnataka.
 								
 								
