--- a/index.html
+++ b/index.html
@@ -65,16 +65,20 @@
 								<h2><u>Skills:</u></h2>
 								<p>
 									<li><b>Programming Languages:</b></li>
-										&nbsp&nbsp&nbsp&nbspPython, C, C++, HTML, CSS, SQL
+										&nbsp&nbsp&nbsp&nbspPython, C, C++, HTML, CSS, SQL<br><br>
 									<li><b>Concepts:</b></li>
-										&nbsp&nbsp&nbsp&nbspDSA, Cloud Computing, Software Development, Software Testing, Web Development,Computer Networks, Proxies, Cybersecurity
+										&nbsp&nbsp&nbsp&nbspDSA, Cloud Computing,<br>
+										&nbsp&nbsp&nbsp&nbspSoftware Development, Software Testing,<br>
+										&nbsp&nbsp&nbsp&nbspWeb Development,Computer Networks,<br>
+										&nbsp&nbsp&nbsp&nbspProxies, Cybersecurity<br><br>
 									<li><b>Operating Systems:</b></li>
-										&nbsp&nbsp&nbsp&nbspWindows, Linux, MacOS, WSL
+										&nbsp&nbsp&nbsp&nbspWindows, Linux, MacOS, WSL<br><br>
 									<li><b>Developer Tools:</b></li>
-										&nbsp&nbsp&nbsp&nbspVMware, Git, Docker, GoLogin, VS Code,
-										PyCharm, Selenium, Atom
+										&nbsp&nbsp&nbsp&nbspVMware, Git, Docker, GoLogin,<br>
+										&nbsp&nbsp&nbsp&nbspVS Code,PyCharm, Selenium, Atom<br><br>
 									<li><b>Other Skills:</b></li>
-										&nbsp&nbsp&nbsp&nbspPresentation, Communication, writing(English, Hindi, Kannada, Arabic)
+										&nbsp&nbsp&nbsp&nbspPresentation, Communication,<br>
+										&nbsp&nbsp&nbsp&nbspwriting(English, Hindi, Kannada, Arabic)<br><br>
 								</p>
 							</div>
 						</section>
