--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 							<header class="major ">
 								<h2>My stance</h2><br/>
 								<ul>
-									<li>A genius is not born, but is educated and trained.</li>
-									<li>The lone wolf dies, but the pack survives.</li>
-									<li>Your habits shape your identity.</li>
+									<li><b>Unity - </b> The lone wolf dies, but the pack survives.</li>
+									<li><b>Dedication - </b> A genius is not born, but is educated and trained.</li>
+									<li><b>Consistency - </b> habits shape your identity.</li>
 								</ul>
 							</header>
 						</div>
@@ -88,8 +88,8 @@
 								<h2><u>Education</u></h2>
 								<p><li><b>Masters in Computer Application</b>,</li>National Institute of Technology Karnataka.<br> 08/2022--05/2025.
 									Surathkal, Karnataka.<h2></h2>
-									<li><a href="images/degree_cirtificate.jpg"><b>Bachelors in Computer Application</b>&nbsp;</a><a href="images/degree_cirtificate.jpg" class="icon fa-paper-plane"></a></li>Mangalore University.<br>05/2019--08/2022
-									Mangalore, Karnataka.
+									<li><a href="images/degree_cirtificate.jpg"><b>Bachelors in Computer Application</b>&nbsp;</a><a href="images/degree_cirtificate.jpg" class="icon fa-paper-plane"></a></li>Mangalore University.<br>05/2019--08/2022.
+									 Mangalore, Karnataka.
 								
 								
 								</p>
@@ -118,9 +118,8 @@
 									<li><b>English</b></li>
 									<li><b>Hindi</b></li>
 									<li><b>Kannada</b></li>
-									<li><b>Beary</b></li>
+									<li><b>Beary/Malayalam</b></li>
 									<li><b>Tulu</b></li>
-									<li><b>Arabic</b>&nbsp;(Read/Write only)</li>
 								</p>
 							</div>
 						</section>
