--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<header class="major ">
 								<h2>My stance</h2><br/>
 								<ul>
-									<li><b>Unity - </b> The lone wolf dies, but the pack survives.</li>
+									<li><b>Unity - </b> A lone wolf dies, but the pack survives.</li>
 									<li><b>Dedication - </b> A genius is not born, but is educated and trained.</li>
 									<li><b>Consistency - </b> habits shape your identity.</li>
 								</ul>
