--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<ul>
 									<li><b>Unity - </b> A lone wolf dies, but the pack survives.</li>
 									<li><b>Dedication - </b> A genius is not born, but is educated and trained.</li>
-									<li><b>Consistency - </b> habits shape your identity.</li>
+									<li><b>Consistency - </b> Habits shape your identity.</li>
 								</ul>
 							</header>
 						</div>
