--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								<h2><u>Education</u></h2>
 								<p><li><b>Masters in Computer Application</b>,</li>National Institute of Technology Karnataka.<br> 08/2022--05/2025.
 									Surathkal, Karnataka.<h2></h2>
-									<li><a href="images/degree_cirtificate.jpg"><b>Bachelors in Computer Application</b>&nbsp;</a><a href="images/degree_cirtificate.jpg" class="icon fa-paper-plane"></a></li>Mangalore University.<br>05/2019--08/2022.
+									<li><b>Bachelors in Computer Application</b>&nbsp;</li>Mangalore University.<br>05/2019--08/2022.
 									 Mangalore, Karnataka.
 								
 								
