--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="https://medium.com/@shan-aks">Blogs</a></li>
-											<li><a href="GameFolder/game.html">Blogs</a></li>
+											<li><a href="GameFolder/game.html">Game</a></li>
 
 										</ul>
 									</div>
