--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 									<li><b>Programming Languages:</b></li>
 										&nbsp&nbsp&nbsp&nbspPython, C, C++, HTML, CSS, SQL<br><br>
 									<li><b>Concepts:</b></li>
-										&nbsp&nbsp&nbsp&nbspDSA, Cloud Computing,<br>
-										&nbsp&nbsp&nbsp&nbspSoftware Development, Software Testing,<br>
-										&nbsp&nbsp&nbsp&nbspWeb Development,Computer Networks,<br>
-										&nbsp&nbsp&nbsp&nbspProxies, Cybersecurity<br><br>
+										&nbsp&nbsp&nbsp&nbspDSA, Software Engineering,<br>
+										&nbsp&nbsp&nbsp&nbspMachine Learning, Computer Graphics,<br>
+										&nbsp&nbsp&nbsp&nbspComputer Networks, Operating System<br>
+										&nbsp&nbsp&nbsp&nbspand Web Development.<br><br>
 									<li><b>Operating Systems:</b></li>
-										&nbsp&nbsp&nbsp&nbspWindows, Linux, MacOS, WSL<br><br>
+										&nbsp&nbsp&nbsp&nbspWindows, Linux, MacOS<br><br>
 									<li><b>Developer Tools:</b></li>
-										&nbsp&nbsp&nbsp&nbspVMware, Git, Docker, GoLogin,<br>
+										&nbsp&nbsp&nbsp&nbspVMware, Git, Docker,<br>
 										&nbsp&nbsp&nbsp&nbspVS Code,PyCharm, Selenium, Atom<br><br>
 									<li><b>Other Skills:</b></li>
 										&nbsp&nbsp&nbsp&nbspPresentation, Communication,<br>
@@ -87,9 +87,9 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2><u>Education</u></h2>
-								<p><li><b>Masters in Computer Application</b>,</li>National Institute of Technology Karnataka.<br> 08/2022--05/2025.
-									Surathkal, Karnataka.<h2></h2>
-									<li><b>Bachelors in Computer Application</b>&nbsp;</li>Mangalore University.<br>05/2019--08/2022.
+								<p><li><b>Master of Computer Application (MCA)</b></li>National Institute of Technology Karnataka.<br> 08/2022-05/2025.
+									Surathkal, Karnataka (NITK).<h2></h2>
+									<li><b>Bachelor of Computer Application (BCA)</b>&nbsp;</li>Mangalore University.<br>05/2019-08/2022.
 									 Mangalore, Karnataka.
 								
 								
@@ -170,7 +170,7 @@
 							<ul class="icons">
 								<li><a href="https://www.facebook.com/profile.php?id=100076599727883&mibextid=LQQJ4d" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.linkedin.com/in/abdul-shan-18a2871a1/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto:amshanaks@icloud.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="mailto:a.m.shan@outlook.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								<li><a href="http://www.github.com/abdulshan" class="icon brands fa-github"><span class="label">github</span></a></li>
 								<li><a href="https://leetcode.com/amshanaks313/" class="icon solid fa-code"><span class="label">Email</span></a></li>
 							</ul>
