--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 										&nbsp&nbsp&nbsp&nbspVS Code,PyCharm, Selenium, Atom<br><br>
 									<li><b>Other Skills:</b></li>
 										&nbsp&nbsp&nbsp&nbspPresentation, Communication,<br>
-										&nbsp&nbsp&nbsp&nbspwriting(English, Hindi, Kannada, Arabic)<br><br>
+										&nbsp&nbsp&nbsp&nbspwriting(English, Hindi, Kannada, Arabic)<br>
+										&nbsp&nbsp&nbsp&nbspFinance and Economics<br>
 								</p>
 							</div>
 						</section>
